<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.administrator.myapplication.LineChartActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" android:layout_alignParentStart="true"
        android:layout_above="@+id/button6"/>
    <Button
        android:text="@string/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2" android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" android:textSize="12sp"/>
    <Button
        android:text="@string/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/button2"
        android:textSize="12sp"/>
    <Button
        android:text="@string/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
        android:textSize="12sp"/>
    <Button
        android:text="@string/Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignBaseline="@+id/button" android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/button" android:textSize="12sp"/>

</RelativeLayout>
