<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_kpi__wireless__access__rate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.myapplication.KPI_Wireless_Access_RateActivity"
    tools:showIn="@layout/activity_kpi__wireless__access__rate">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/wireless_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" android:layout_above="@+id/wireless_button"/>
    <Button
        android:text="@string/prb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prb_button"
        android:textSize="14sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light" android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" android:layout_marginEnd="12dp"/>
    <Button
        android:text="@string/drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drop_button"
        android:textSize="14sp"
        android:textColor="@android:color/background_light"
        android:background="@color/colorPrimary" android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
    <Button
        android:text="@string/wireless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wireless_button"
        android:textSize="14sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/background_light" android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" android:layout_marginStart="11dp"/>

</RelativeLayout>
